--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3>Avi Press</h3>
 
             <ul>
-    <li>Making payments easy for developers at <a href="https://dotdashpay.com">DotDashPay</a></li>
+    <li>Making payments easy for developers at <a href="https://dotdashpay.com">DotDashPay.</a> <a href="https://angel.co/dotdashpay/jobs/138493-software-engineer">We're hiring!</a></li>
     <li>Former engineer at Pandora. Among other things, I built integrations with Songkick and Ticketfly to help people find great concerts</li>
     <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs</li>
     <li><a href="https://github.com/aviaviavi/legion">Legion</a> - an as-simple-as-possible blockchain server implementation</li>
