block post finalish

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ title: Home
 
 <ul>
     <li>Making payments easy for developers at <a href="https://dotdashpay.com">DotDashPay.</a> <a href="https://angel.co/dotdashpay/jobs/138493-software-engineer">We're hiring!</a></li>
-    <li>Former engineer at Pandora. Among other things, I built integrations with Songkick and Ticketfly to help people find great concerts</li>
+    <li>Former engineer at Pandora. Among other things, I built a concert recommendation system with
+        Songkick and Ticketfly integrations to help people find great concerts.</li>
     <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs</li>
     <li><a href="https://github.com/aviaviavi/legion">Legion</a> - an as-simple-as-possible blockchain server implementation</li>
     <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
