--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Avi Press</title>
-        <link rel="icon" type="image/png" sizes="32x32" href="images/dwarf-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
         <link rel="stylesheet" href="./css/normalize.css" />
         <link rel="stylesheet" href="./css/skeleton.css" />
         <link rel="stylesheet" href="./css/default.css" />
