--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <li><a href="https://github.com/aviaviavi/legion">Legion</a> - an as-simple-as-possible blockchain server implementation</li>
     <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
     <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
+    <li><a href="https://github.com/aviaviavi/toodles">Toodles</a> - Project management directly from the TODO's in your code</li>
     <li>Some research - <a href="https://cocosci.berkeley.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a></li>
 
     <li><a class="github-button" href="https://github.com/aviaviavi" aria-label="Follow @aviaviavi on GitHub">Follow @aviaviavi</a></li>
