--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./css/default.css" />
         <link rel="stylesheet" href="./css/syntax.css" />
         <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <meta name="flattr:id" content="e0vnkv">
     </head>
     <body>
         <div class="content">
