--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./css/default.css" />
         <link rel="stylesheet" href="./css/syntax.css" />
         <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <meta name="flattr:id" content="e0vnkv">
     </head>
     <body>
         <div class="content">
@@ -33,11 +34,11 @@
     <li>Making mobile wallet integrations easy for developers and merchants at <a href="https://dotdashpay.com">DotDashPay.</a></li>
     <li>Former engineer at Pandora. Among other things, I built a concert recommendation system with
         Songkick and Ticketfly integrations to help people find great concerts.</li>
+    <li><a href="https://github.com/aviaviavi/toodles">Toodles</a> - Project management directly from the TODO's in your code</li>
+    <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
+    <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
     <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs</li>
     <li><a href="https://github.com/aviaviavi/legion">Legion</a> - an as-simple-as-possible blockchain server implementation</li>
-    <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
-    <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
-    <li><a href="https://github.com/aviaviavi/toodles">Toodles</a> - Project management directly from the TODO's in your code</li>
     <li>Some research - <a href="https://cocosci.berkeley.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a></li>
 
     <li><a class="github-button" href="https://github.com/aviaviavi" aria-label="Follow @aviaviavi on GitHub">Follow @aviaviavi</a></li>
