toodles, fraction updates

--- a/index.html
+++ b/index.html
@@ -31,15 +31,22 @@
                 </div>
                 <div class="ten columns">
                     <ul>
-    <li>Making mobile wallet integrations easy for developers and merchants at <a href="https://dotdashpay.com">DotDashPay.</a></li>
+    <li>Software engineer, functional programming enthusiast</li>
+    <li>Building better, smarter coupons for small businesses at <a href="https://fractiondeals.com">Fraction</a></li>
+    <li>Available for software <a href="https://applicative.pro">consulting and contracting</a></li>
     <li>Former engineer at Pandora. Among other things, I built a concert recommendation system with
         Songkick and Ticketfly integrations to help people find great concerts.</li>
-    <li><a href="https://github.com/aviaviavi/toodles">Toodles</a> - Project management directly from the TODO's in your code</li>
-    <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
-    <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
-    <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs</li>
-    <li><a href="https://github.com/aviaviavi/legion">Legion</a> - an as-simple-as-possible blockchain server implementation</li>
-    <li>Some research - <a href="https://cocosci.berkeley.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a></li>
+
+    <li>Projects
+        <ul>
+            <li><a href="http://toodles.avi.press">Toodles</a> - Project management directly from the TODO's in your code</li>
+            <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
+            <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
+            <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs</li>
+            <li><a href="https://github.com/aviaviavi/legion">Legion</a> - an as-simple-as-possible blockchain server implementation</li>
+            <li>Some research - <a href="https://cocosci.berkeley.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a></li>
+        </ul>
+    </li>
 
     <li><a class="github-button" href="https://github.com/aviaviavi" aria-label="Follow @aviaviavi on GitHub">Follow @aviaviavi</a></li>
     <li><a href="https://twitter.com/avi_press" class="twitter-follow-button" data-show-count="false">Follow @avi_press</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
