--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 
 <ul>
     <li>Software engineer, functional programming enthusiast</li>
-    <li>Building better, smarter coupons for small businesses at <a href="https://fractiondeals.com">Fraction</a></li>
+    <li>Building better, smarter coupons for small businesses at <a href="https://www.fractiondeals.com">Fraction</a></li>
     <li>Available for software <a href="https://applicative.pro">consulting and contracting</a></li>
     <li>Former engineer at Pandora. Among other things, I built a concert recommendation system with
         Songkick and Ticketfly integrations to help people find great concerts.</li>
