--- a/archive.html
+++ b/archive.html
@@ -30,8 +30,12 @@
                     </table>
                 </div>
                 <div class="ten columns">
-                    You can find my blogposts here:
+                    Blog posts:
 <ul>
+    
+        <li>
+            <a href="./posts/2019-02-25-Some-Decent-Recipies.html">Some decent recipes that I make now and then</a> - February 25, 2019
+        </li>
     
         <li>
             <a href="./posts/2017-08-25-haskell-dbs-and-musicbrainz.html">Easy database access with Haskell and postgresql-simple</a> - August 25, 2017
