--- a/archive.html
+++ b/archive.html
@@ -32,6 +32,10 @@
                 <div class="ten columns">
                     Blog posts:
 <ul>
+
+        <li>
+            <a href="https://medium.com/swlh/a-failed-effort-to-get-paid-for-an-open-source-project-bd7fa4658a1e">A Failed Effort to Get Paid for an Open Source Project</a> - May 29, 2019
+        </li>
     
         <li>
             <a href="./posts/2019-02-25-Some-Decent-Recipes.html">Some decent recipes that I make now and then</a> - February 25, 2019
