--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <li>Projects
         <ul>
+            <li><a href="https://scarf.sh">Scarf</a> - The developer-focused package manager helping open-source developers distribute and monetize their projects</li>
             <li><a href="http://toodles.avi.press">Toodles</a> - Project management directly from the TODO's in your code</li>
             <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
             <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
