--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
                 <div class="ten columns">
                     <ul>
     <li>Software engineer, functional programming enthusiast</li>
-    <li>Building better, smarter coupons for small businesses at <a href="https://www.fractiondeals.com">Fraction</a></li>
-    <li>Available for software <a href="https://applicative.pro">consulting and contracting</a></li>
+    <li>Working primarly on <a href="https://scarf.sh">Scarf</a> - A project to help open-source developers distribute and monetize their work when used in a commercial setting.</li>
     <li>Former engineer at Pandora. Among other things, I built a concert recommendation system with
         Songkick and Ticketfly integrations to help people find great concerts.</li>
 
-    <li>Projects
+    <li>Other projects
         <ul>
-            <li><a href="https://scarf.sh">Scarf</a> - The developer-focused package manager helping open-source developers distribute and monetize their projects</li>
             <li><a href="http://toodles.avi.press">Toodles</a> - Project management directly from the TODO's in your code</li>
             <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
             <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
