--- a/archive.html
+++ b/archive.html
@@ -36,11 +36,14 @@
         <li>
             <a href="https://medium.com/swlh/a-failed-effort-to-get-paid-for-an-open-source-project-bd7fa4658a1e">A Failed Effort to Get Paid for an Open Source Project</a> - May 29, 2019
         </li>
-    
+
         <li>
             <a href="./posts/2017-08-25-haskell-dbs-and-musicbrainz.html">Easy database access with Haskell and postgresql-simple</a> - August 25, 2017
         </li>
-    
+
+        <li>
+            <a href="https://cocosci.berkeley.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a>
+        </li>
 </ul>
 
 
