--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
             <li><a href="http://toodles.avi.press">Toodles</a> - Project management directly from the TODO's in your code</li>
             <li><a href="https://github.com/aviaviavi/curl-runnings">curl-runnings</a> - a framework for quickly and correctly writing integration tests for json APIs and more</li>
             <li><a href="https://github.com/aviaviavi/confetti">Confetti</a> - a simple configuration file swapping tool</li>
-            <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs</li>
+            <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs. Give it a try!</li>
             <li><a href="https://github.com/aviaviavi/legion">Legion</a> - an as-simple-as-possible blockchain server implementation</li>
             <li>Some research - <a href="https://cocosci.berkeley.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a></li>
         </ul>
