--- a/archive.html
+++ b/archive.html
@@ -42,7 +42,7 @@
         </li>
 
         <li>
-            <a href="https://cocosci.berkeley.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a>
+            <a href="http://cocosci.princeton.edu/mike/CachingAlgorithms.pdf">Caching Algorithms and Rational Models of Memory</a> - May, 2014
         </li>
 </ul>
 
