--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="ten columns">
                     <ul>
     <li>Software engineer, functional programming enthusiast</li>
-    <li>Working primarly on <a href="https://scarf.sh">Scarf</a> - A project to help open-source developers distribute and monetize their work when used in a commercial setting.</li>
+    <li>Founder and CEO of <a href="https://scarf.sh">Scarf</a> - A project to help open-source developers distribute and monetize their work when used in a commercial setting.</li>
     <li>Former engineer at Pandora. Among other things, I built a concert recommendation system with
         Songkick and Ticketfly integrations to help people find great concerts.</li>
 
