--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-09-28 Wed 19:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Avi Press</title>
@@ -224,11 +223,11 @@
 <div id="content">
 <h1 class="title">Avi Press</h1>
 
-<div id="outline-container-org9126177" class="outline-2">
-<h2 id="org9126177">About me</h2>
-<div class="outline-text-2" id="text-org9126177">
+<div id="outline-container-org590995a" class="outline-2">
+<h2 id="org590995a">About me</h2>
+<div class="outline-text-2" id="text-org590995a">
 <ul class="org-ul">
-<li>Software engineer, functional programming enthusiast, open-source maintainer and advocate</li>
+<li>Software engineer, functional programming enthusiast, open source maintainer and advocate</li>
 <li>Founder and CEO of <a href="https://scarf.sh">Scarf</a> - Scarf build advanced download and adoption metrics for open source software</li>
 <li>Former engineer at Pandora</li>
 <li>Based in Oakland, California</li>
@@ -237,9 +236,9 @@
 </div>
 </div>
 
-<div id="outline-container-org5845fa0" class="outline-2">
-<h2 id="org5845fa0">Contact</h2>
-<div class="outline-text-2" id="text-org5845fa0">
+<div id="outline-container-org2d53e46" class="outline-2">
+<h2 id="org2d53e46">Contact</h2>
+<div class="outline-text-2" id="text-org2d53e46">
 <ul class="org-ul">
 <li>Follow me on <a href="https://twitter.com/avi_press">Twitter</a>, <a href="https://github.com/aviaviavi">Github</a></li>
 <li>I hold open office hours for anyone that you can book with me <a href="https://calendly.com/avi-press/office-hours">here</a>, no prior confirmation from me required.</li>
@@ -248,9 +247,9 @@
 </div>
 </div>
 
-<div id="outline-container-org0707d33" class="outline-2">
-<h2 id="org0707d33">Other things</h2>
-<div class="outline-text-2" id="text-org0707d33">
+<div id="outline-container-org65c9ed1" class="outline-2">
+<h2 id="org65c9ed1">Other things</h2>
+<div class="outline-text-2" id="text-org65c9ed1">
 <ul class="org-ul">
 <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs. Give it a try!</li>
 <li><a href="wilson-reunion.html">Wilson High School Class of 2010 Reunion</a></li>
@@ -258,9 +257,9 @@
 </div>
 </div>
 
-<div id="outline-container-org930c2d8" class="outline-2">
-<h2 id="org930c2d8">Content</h2>
-<div class="outline-text-2" id="text-org930c2d8">
+<div id="outline-container-orgda2a24d" class="outline-2">
+<h2 id="orgda2a24d">Content</h2>
+<div class="outline-text-2" id="text-orgda2a24d">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -403,9 +402,6 @@
 </table>
 </div>
 </div>
-</div>
-<div id="postamble" class="status">
-<p class="date">Created: 2022-09-28 Wed 19:34</p>
 </div>
 </body>
 </html>
