--- a/index.html
+++ b/index.html
@@ -198,9 +198,11 @@ $(function() {
 <h2 id="sec-">About me</h2>
 <div class="outline-text-2" id="text-">
 <ul class="org-ul">
-<li>Software engineer, functional programming enthusiast, open source maintainer and advocate
-</li>
 <li>Founder and CEO of <a href="https://scarf.sh">Scarf</a> - Scarf builds advanced download and adoption metrics for open source software
+</li>
+<li>Open source maintainer and advocate
+</li>
+<li>Functional programming enthusiast
 </li>
 <li>Former engineer at Pandora
 </li>
@@ -230,6 +232,8 @@ $(function() {
 <h2 id="sec-">Other things</h2>
 <div class="outline-text-2" id="text-">
 <ul class="org-ul">
+<li>I'm a host of the <a href="https://www.youtube.com/@opensourcebusiness">Hacking Open Source Business Podcast</a>. Smash that subscribe button, etc. 
+</li>
 <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs. Give it a try!
 </li>
 <li><a href="wilson-reunion.html">Wilson High School Class of 2010 Reunion</a>
@@ -250,6 +254,11 @@ $(function() {
 <col  class="left">
 </colgroup>
 <tbody>
+<tr>
+<td class="text-left"><a href="https://www.youtube.com/watch?v=7XHlbqLLFXs&amp;list=PL6kQg8bP1Ji55k6rDro2rIL8GMzTRQwB3&amp;index=8">How Do You Know if Your Project is Any Good? (All Things Open)</a></td>
+<td class="text-left">November 2, 2022</td>
+</tr>
+
 <tr>
 <td class="text-left"><a href="https://twit.tv/shows/floss-weekly/episodes/693?autostart=false">FLOSS Weekly Podcast</a></td>
 <td class="text-left">August 10, 2022</td>
