update office hours link to cal.com

--- a/index.html
+++ b/index.html
@@ -208,19 +208,18 @@ $(function() {
 </li>
 <li>Based in Oakland, California
 </li>
-<li>This site is built with <a href="https://orgmode.org/">Org Mode</a>. 
+<li>This site is built with <a href="https://orgmode.org/">Org Mode</a>.
 </li>
 </ul>
 </div>
 </div>
-
 <div id="outline-container-sec-" class="outline-2">
 <h2 id="sec-">Contact</h2>
 <div class="outline-text-2" id="text-">
 <ul class="org-ul">
 <li>Follow me on <a href="https://twitter.com/avi_press">Twitter</a>, <a href="https://github.com/aviaviavi">Github</a>
 </li>
-<li>I hold open office hours for anyone that you can book with me <a href="https://calendly.com/avi-press/office-hours">here</a>, no prior confirmation from me required.
+<li>I hold open office hours for anyone that you can book with me <a href="https://cal.com/avi-press/office-hours">here</a>, no prior confirmation from me required.
 </li>
 <li>Email: <a href="mailto:mail@avi.press">mail@avi.press</a>
 </li>
@@ -232,7 +231,7 @@ $(function() {
 <h2 id="sec-">Other things</h2>
 <div class="outline-text-2" id="text-">
 <ul class="org-ul">
-<li>I'm a host of the <a href="https://www.youtube.com/@opensourcebusiness">Hacking Open Source Business Podcast</a>. Smash that subscribe button, etc. 
+<li>I'm a host of the <a href="https://www.youtube.com/@opensourcebusiness">Hacking Open Source Business Podcast</a>. Smash that subscribe button, etc.
 </li>
 <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs. Give it a try!
 </li>
