--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ $(function() {
 <h2 id="sec-">About me</h2>
 <div class="outline-text-2" id="text-">
 <ul class="org-ul">
-<li>Founder and CEO of <a href="https://scarf.sh">Scarf</a> - Scarf builds advanced download and adoption metrics for open source software
+<li>Founder and CEO of <a href="https://scarf.sh">Scarf</a> - Scarf builds advanced user &amp; customer intelligence for open source software projects
 </li>
 <li>Open source maintainer and advocate
 </li>
