Reunion link fix

--- a/wilson-reunion.html
+++ b/wilson-reunion.html
@@ -197,7 +197,7 @@ $(function() {
 </p>
 
 <p>
-Join us on 8/19! <a href="https://www.eventbrite.com/manage/events/616238314387/details">Get your tickets here!</a>
+Join us on 8/19! <a href="https://Wilson2010reunion.eventbrite.com">Get your tickets here!</a>
 </p>
 </div></div></div>
 </body>
