--- a/index.html
+++ b/index.html
@@ -231,11 +231,9 @@ $(function() {
 <h2 id="sec-">Other things</h2>
 <div class="outline-text-2" id="text-">
 <ul class="org-ul">
-<li>I'm a host of the <a href="https://www.youtube.com/@opensourcebusiness">Hacking Open Source Business Podcast</a>. Smash that subscribe button, etc.
+<li>I'm a host of the <a href="https://www.youtube.com/watch?v=WERFZq5Oe2Y&amp;list=PLS9wrEdf4JzWxrsk0hc4tZ98viiy6mrWV">Hacking Open Source Business Podcast</a>. Smash that subscribe button, etc.
 </li>
 <li><a href="https://tabdextension.com">Tabd</a> - a chrome extension for sharing tabs. Give it a try!
-</li>
-<li><a href="wilson-reunion.html">Wilson High School Class of 2010 Reunion</a>
 </li>
 </ul>
 </div>
