--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@ $(function() {
 </colgroup>
 <tbody>
 <tr>
+<td class="text-left"><a href="posts/2023-12-29-call-for-haskell-libraries.html">Call for Haskell Libraries</a></td>
+<td class="text-left">December 29, 2023</td>
+</tr>
+
+<tr>
 <td class="text-left"><a href="https://www.youtube.com/watch?v=7XHlbqLLFXs&amp;list=PL6kQg8bP1Ji55k6rDro2rIL8GMzTRQwB3&amp;index=8">How Do You Know if Your Project is Any Good? (All Things Open)</a></td>
 <td class="text-left">November 2, 2022</td>
 </tr>
