--- a/index.html
+++ b/index.html
@@ -257,6 +257,11 @@ $(function() {
 </tr>
 
 <tr>
+<td class="text-left"><a href="https://www.youtube.com/watch?v=qw4S_6FXsp4">Why Haskell is a Terrible Choice For Startups (And Why We Picked It Anyway)</a></td>
+<td class="text-left">December 7, 2023</td>
+</tr>
+
+<tr>
 <td class="text-left"><a href="https://www.youtube.com/watch?v=7XHlbqLLFXs&amp;list=PL6kQg8bP1Ji55k6rDro2rIL8GMzTRQwB3&amp;index=8">How Do You Know if Your Project is Any Good? (All Things Open)</a></td>
 <td class="text-left">November 2, 2022</td>
 </tr>
