--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ $(function() {
 
     $('.bs-docs-sidebar').affix();
 });
-</script><link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
+</script><link rel="icon" type="image/png" href="https://static.scarf.sh/a.png?x-pxid=81e4a851-7a38-4727-af19-05a9106609c0">
+<link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
