--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@ $(function() {
 
     $('.bs-docs-sidebar').affix();
 });
-</script><link rel="icon" type="image/png" href="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81">
-<link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
+</script><link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <div id="content" class="container">
 <div class="row"><div class="col-md-12"><h1 class="title">Avi Press</h1>
 <img style="height:15rem;" src="./images/portrait.jpg"></img>
+<img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=88710f57-e0e5-4c62-84b8-f3bf70797a81" />
 
 <div id="outline-container-sec-" class="outline-2">
 <h2 id="sec-">About me</h2>
