font update, footer

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ figcaption {
     }
 }
 </style>
-<style>body { margin-bottom: 0px; }</style><script>
+<script>
 $(function() {
     'use strict';
 
@@ -187,6 +187,7 @@ $(function() {
     $('.bs-docs-sidebar').affix();
 });
 </script><link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
+<link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css">
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -391,5 +392,8 @@ $(function() {
 </div>
 </div>
 </div></div></div>
+<footer id="postamble" class="">
+<p class="postamble">© Avi Press 2024</p>
+</footer>
 </body>
 </html>
