--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ $(function() {
 </script><link rel="icon" type="image/png" sizes="32x32" href="./images/dwarf-icon.png">
 <link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css">
 <link rel="stylesheet" href="./css/styles.css">
+<link href="https://cdn.jsdelivr.net/npm/flat-icons@1.0.0/creative.min.css" rel="stylesheet">
 </head>
 <body>
 <div id="content" class="container">
@@ -394,6 +395,11 @@ $(function() {
 </div></div></div>
 <footer id="postamble" class="">
 <p class="postamble">© Avi Press 2024</p>
+            <p class="postamble">
+              <a href="https://twitter.com/avi_press">Twitter</a>
+              <a href="https://github.com/aviaviavi">GitHub</a>
+              <a href="https://www.linkedin.com/in/avi-press-4437a356">LinkedIn</a>
+  </p>
 </footer>
 </body>
 </html>
